--- a/smb.conf
+++ b/smb.conf
@@ -21,7 +21,9 @@
 #
 #======================= Global Settings =====================================
 [global]
-
+follow symlinks = yes
+   wide links = yes
+   unix extensions = no
 # workgroup = NT-Domain-Name or Workgroup-Name, eg: MIDEARTH
    workgroup = WORKGROUP
 
