--- a/smb.conf
+++ b/smb.conf
@@ -225,7 +225,7 @@ follow symlinks = yes
 #Shared in E drive
 [Shared]
     comment = Shared
-    path = /mnt/sda7/Shared
+    path = /run/media/ishan/New Volume/Shared
     public = no
     writable = yes
     create mask = 0777
