--- a/smb.conf
+++ b/smb.conf
@@ -229,3 +229,10 @@ follow symlinks = yes
     public = no
     writable = yes
     create mask = 0777
+
+[LocalD]
+    comment = LocalD
+    path = /mnt/sda6
+    public = no
+    writable = yes
+    create mask = 0777
