03/01 gnome 42 beta breakdown

--- a/smb.conf
+++ b/smb.conf
@@ -225,14 +225,8 @@ follow symlinks = yes
 #Shared in E drive
 [Shared]
     comment = Shared
-    path = /run/media/ishan/New Volume1/Shared
+    path = /run/media/ishan/0686E7BF5BF8960B/Shared
     public = no
     writable = yes
     create mask = 0777
 
-[LocalD]
-    comment = LocalD
-    path = /mnt/sda6
-    public = no
-    writable = yes
-    create mask = 0777
