--- a/smb.conf
+++ b/smb.conf
@@ -225,7 +225,7 @@ follow symlinks = yes
 #Shared in E drive
 [Shared]
     comment = Shared
-    path = /run/media/ishan/0686E7BF5BF8960B/Shared
+    path = /run/media/sda7/Shared/
     public = no
     writable = yes
     create mask = 0777
