changed 7/02  Changes to be committed: 	modified:   alacritty/alacritty.yml 	modified:   arcmenu 	modified:   d2p 	new file:   grub.cfg 	modified:   packagelist

--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -61,7 +61,7 @@ window:
   # Values for `decorations` (macOS only):
   #     - transparent: Title bar, transparent background and title bar buttons
   #     - buttonless: Title bar, transparent background and no title bar buttons
-  decorations: none
+  decorations: full
 
   # Background opacity
   #
@@ -426,7 +426,7 @@ live_config_reload: true
 #   - (Linux/BSD) user login shell
 #   - (Windows) powershell
 shell:
-  program: /bin/zsh
+  program: /bin/sh
   args:
     - --login
 
