--- a/httpd.conf
+++ b/httpd.conf
@@ -182,13 +182,14 @@ LoadModule autoindex_module modules/mod_autoindex.so
 LoadModule negotiation_module modules/mod_negotiation.so
 LoadModule dir_module modules/mod_dir.so
 #LoadModule imagemap_module modules/mod_imagemap.so
-#LoadModule actions_module modules/mod_actions.so
+LoadModule actions_module modules/mod_actions.so
 #LoadModule speling_module modules/mod_speling.so
 LoadModule userdir_module modules/mod_userdir.so
 LoadModule alias_module modules/mod_alias.so
 #LoadModule rewrite_module modules/mod_rewrite.so
 
 <IfModule unixd_module>
+LoadModule fcgid_module modules/mod_fcgid.so
 #
 # If you wish httpd to run as a different user or group, you must run
 # httpd as root initially and it will switch.  
@@ -514,7 +515,7 @@ LogLevel warn
 
 # Server-pool management (MPM specific)
 Include conf/extra/httpd-mpm.conf
-
+Include conf/extra/php-fcgid.conf
 # Multi-language error messages
 Include conf/extra/httpd-multilang-errordoc.conf
 
