--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -426,7 +426,7 @@ live_config_reload: true
 #   - (Linux/BSD) user login shell
 #   - (Windows) powershell
 shell:
-  program: /bin/sh
+  program: /usr/bin/zsh
   args:
     - --login
 
